# haskellLab

./: CHANGELOG.md  README.md  my-tree-map.cabal
.stack-work/: stack.sqlite3
src/: Main.hs  Tree.hs
test/: TreeSpec.hs
