cabal-version:       2.4
name:                my-tree-map
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Tree
  build-depends:       base >= 4.7 && < 5

executable my-tree-map
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , my-tree-map

test-suite my-tree-map-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TreeSpec.hs
  build-depends:       base
                     , my-tree-map
                     , hspec
  ghc-options:         -Wall
